--- a/XamarinContacts/XamarinContacts/XamarinContacts.csproj
+++ b/XamarinContacts/XamarinContacts/XamarinContacts.csproj
@@ -11,13 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Pages\" />
     <Folder Include="Resources\" />
   </ItemGroup>
 </Project>
