Добавлена страница редактирования контакта

--- a/XamarinContacts/XamarinContacts/XamarinContacts.csproj
+++ b/XamarinContacts/XamarinContacts/XamarinContacts.csproj
@@ -17,7 +17,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Resources\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Pages\ContactPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
